--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ ConfigParser==7.2.0
 contextlib2==21.6.0
 cryptography==45.0.4
 docutils==0.21.2
-faiss==1.5.3
+faiss-cpu==1.7.4
 filelock==3.18.0
 google_api_python_client==2.172.0
 h2==4.2.0
