--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ chardet==5.2.0
 ConfigParser==7.2.0
 contextlib2==21.6.0
 cryptography==45.0.4
+Cython==0.29.36
 docutils==0.21.2
 faiss-cpu==1.7.4
 filelock==3.18.0
