Incluido Typing indicator

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@
 /.idea/inspectionProfiles/profiles_settings.xml
 /.idea/vcs.xml
 /.idea/workspace.xml
+/.idea/dataSources/9595acdf-e1d4-494d-8e90-500e9fadd825.xml
+/.idea
+
